--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,55 @@
 /.phpunit.cache
+/build
+/coverage
 /node_modules
 /public/build
+/public/dist
+/public/vendor
 /public/hot
 /public/storage
+/public/image
+/public/video
+/public/mix-manifest.json
+/public/js/.vscode
 /storage/*.key
+/storage/logs
 /vendor
+*.sublime-project
+*.sublime-workspace
+_ide_helper.php
+.DS_Store
 .env
 .env.backup
 .env.production
+.php_cs.cache
+.phplint-cache
 .phpunit.result.cache
+.phpstorm.meta.php
+.rnd
+.vite
+.project
+auth.json
+composer.phar
+coverage.xml
+docker-compose.override.yml
+error.log
 Homestead.json
 Homestead.yaml
-auth.json
 npm-debug.log
+output.txt
+Thumbs.db
 yarn-error.log
+
+# Ignore the ide helper file
 /.fleet
 /.idea
 /.vscode
+.vscode
+.idea
+
+# Ignore the scribe config file
+/.scribe
+/public/vendor/scribe
+/public/docs
+/resources/views/scribe
+config/scribe.php.bak
