--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,24 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.10",
+        "guzzlehttp/guzzle": "^7.7",
+        "laravel/framework": "^10.14",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "openai-php/laravel": "^0.6.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "barryvdh/laravel-ide-helper": "^2.13",
+        "fakerphp/faker": "^1.23",
+        "knuckleswtf/scribe": "^4.22",
+        "laravel/pint": "^1.10",
+        "laravel/sail": "^1.23",
+        "mockery/mockery": "^1.6",
+        "nunomaduro/collision": "^7.7",
+        "pestphp/pest": "^2.8",
+        "pestphp/pest-plugin-laravel": "^2.0",
+        "phpunit/phpunit": "^10.2",
+        "spatie/laravel-ignition": "^2.2"
     },
     "autoload": {
         "psr-4": {
@@ -46,6 +50,14 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "ide-helper-gen": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:meta",
+            "@php artisan route:clear",
+            "@php artisan scribe:generate",
+            "@php artisan optimize"
         ]
     },
     "extra": {
