--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.14",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "openai-php/laravel": "^0.6.0"
+        "openai-php/laravel": "^0.6.0",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
